Fixed layout bugS

--- a/src/scss/_team.scss
+++ b/src/scss/_team.scss
@@ -37,7 +37,7 @@ hr.team-divider {
 		width: 100%;
 		height: 60vh;
 		min-height: 30rem;	
-		background-image: url("../img/community-photo-blue.png");
+		background-image: url("../img/community-photo-blue.jpg");
 		background-size: cover;
 		background-position: center 0;
 		position:relative;
